# lntconfig

./: Makefile  Makefile.am  Makefile.in  config.h  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  (+7 more)
src/: Makefile  Makefile.am  Makefile.in  liblntconfig.la  liblntconfig_la-lntconfig.lo  lntconfig.c
src/.deps/: liblntconfig_la-lntconfig.Plo
src/.libs/: liblntconfig.la  liblntconfig.lai
src/submodules/: Makefile  Makefile.am  Makefile.in
src/submodules/libconfig-1.5/: Makefile  config.status  libtool
src/submodules/libconfig-1.5/doc/: Makefile
src/submodules/libconfig-1.5/examples/: Makefile
src/submodules/libconfig-1.5/examples/c/: Makefile  example1  example2  example3
src/submodules/libconfig-1.5/examples/c++/: Makefile  example1  example2  example3  example4
src/submodules/libconfig-1.5/lib/: Makefile
src/submodules/libconfig-1.5/lib/.deps/: libconfig___la-grammar.Plo  libconfig___la-libconfig.Plo  libconfig___la-scanctx.Plo  libconfig___la-scanner.Plo  libconfig___la-strbuf.Plo  libconfig_la-grammar.Plo  libconfig_la-libconfig.Plo  libconfig_la-scanctx.Plo  libconfig_la-scanner.Plo  libconfig_la-strbuf.Plo
src/submodules/libconfig-1.5/lib/.libs/: libconfig++.so.9.2.0  libconfig.so.9.2.0
src/submodules/libconfig-1.5/tests/: Makefile  libconfig_tests
src/submodules/libconfig-1.5/tests/.deps/: libconfig_tests-tests.Po
src/submodules/libconfig-1.5/tests/.libs/: libconfig_tests
src/submodules/libconfig-1.5/tinytest/: Makefile
src/submodules/libconfig-1.5/tinytest/.deps/: tinytest.Po
(+21 files in other folders)
